# gradience

./: .gitignore  .pre-commit-config.yaml  Bench_Mistral_GSM8K_Extension_StepByStep.md  CHANGELOG.md  CLI_CHEATSHEET.md  CONTRIBUTING.md  DOWNSTREAM_PATTERNS.md  FLATNESS_WITNESS.md  Gradience_v0.6.0_Release_Notes.md  MANIFEST.in  Makefile  NOTICE  POLICY_SCOREBOARD_IMPLEMENTATION.md  PUBLIC_API.md  QA_CHECKLIST_UDR.md  QUICK_REFERENCE.md  QUICK_REFERENCE_NEW.md  RANK_POLICIES.md  RANK_POLICIES_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.10.md  RELEASE_NOTES_v0.3.7.md  RELEASE_NOTES_v0.3.9.md  RELEASE_NOTES_v0.8.0_SVD.md  RUNPOD_QUICKSTART.md  STEP2_COMPLETED.md  SVD_VERIFICATION_SUMMARY.md  USER_MANUAL.md  VALIDATION_POLICY.md  bench.json  bench.md  bench_focus_integration_example.py  bench_internal.json  compression_configs.json  create_flat_audit_sample.py  create_test_adapter.py  demo_candidate_control.py  (+55 more)
.github/workflows/: README.md  (+3 more)
docs/: GRADIENCE_RESEARCH_SYNTHESIS.txt  LORA_RESEARCH.md  PEFT_RANK_PATTERN_NOTES.md  PRIVACY.md  RESEARCH_AGENDA.md  api_stability.md  cpu_smoke_tests.md  runpod.md  runpod_quickstart.md  storage_and_caching.md  udr_example.md
examples/: README.md  api_usage_demo.py
experiments/: FINDING_architecture_grokking.txt  FINDING_finetune_signatures.txt  FINDING_necessary_not_sufficient.txt  README.md  RESEARCH_SUMMARY.txt  RUNPOD_SETUP.md  analyze_mechanism_test.py  mechanism_test_config.yaml  run_mechanism_test.sh  runpod_launcher.sh
gradience/: __init__.py  __main__.py  api.py  cli.py  controller.py  demo.py  peft_utils.py  spectral.py  structural.py  telemetry.py
gradience_example_output/: README.md  adapter_config.json  run.jsonl
intervention_aggressive/: results.json
intervention_results/: results.json
intervention_results_full/: results.json
lora_results/: run_summary.json
outputs/: run.jsonl
per_layer/: adapter_config.json  eval.json  run.jsonl
per_layer_shuffled/: adapter_config.json  eval.json  run.jsonl
probe_r16/: adapter_config.json  audit.json  eval.json  run.jsonl
scripts/: VALIDATION_PROTOCOL.md  aggregate_multiseed.py  analyze_safe_baselines.py  compare_approaches.py  demo_gain_audit.sh  freeze_reference_results.sh  inspect_audit.py  one_liner_inspect.py  outsider_bench_drill.sh  pre_release_bench_check.sh  run_certifiable_v0.1.sh  run_ci_smoke_tests.py  sensitivity_check_fixed_seed.sh  setup_cache_env.sh  setup_venv.sh  smoke.sh  smoke_hf.sh  test_policy_regression.sh  training_integration_example.py  validate_suggestions.sh  validation_protocol.py  verify_version.py
smoke_test_option_b/: bench.json  bench.md  bench_internal.json  compression_configs.json  verdicts.json
test_regular_undertrained/: compression_configs.json
tests/: test_adapter_weights_path_detection.py  test_audit_json_invariants.py  test_basic_functionality.py  test_bench_aggregator_compatibility.py  test_bench_config_parsing.py  test_bench_eval.py  test_bench_eval_metric_requirements.py  test_bench_report.py  test_cli_smoke.py  test_console_script_declared.py  test_core.py  test_cpu_smoke_comprehensive.py  test_gain_metrics.py  test_gsm8k_profile.py  test_guard_cpu_validation.py  test_guard_non_interference_contract.py  test_guard_with_driver.py  test_hf_callback.py  test_hf_callback_guard.py  test_hf_callback_minimal.py  test_init.py  test_lora_guard.py  test_metric_requirements_failure_cases.py  test_no_patch_artifacts.py  test_per_layer_rank_suggestion.py  test_per_layer_suggestions_invariants.py  test_rank_policies.py  test_rank_suggestion.py  test_suggest_per_layer_flag.py  test_svd_bench_integration.py  test_svd_bench_smoke.py  test_svd_truncation.py  test_telemetry_text_guardrail.py  test_udr_correctness.py  test_udr_integration.py  test_udr_integration_simple.py  test_udr_opt_in_policy.py  test_udr_policy_integration.py  test_validation_protocol.py  test_vnext_telemetry_contract.py
uniform_median_r2/: adapter_config.json  eval.json  run.jsonl
uniform_p90_r8/: adapter_config.json  eval.json  run.jsonl
(+641 files in other folders)
