[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradience"
version = "0.3.4"
description = "Spectral diagnostics and restraint-first monitoring for neural network training and LoRA fine-tuning."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch",
  "numpy",
  "pyyaml",
  "transformers",
  "peft",
  "datasets",
]

[project.optional-dependencies]
hf = [
  "accelerate",
  "safetensors",
]
dev = [
  "pytest",
  "build",
  "ruff",
  "mypy",
]

[project.scripts]
gradience = "gradience.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gradience*"]

[tool.setuptools]
include-package-data = true
