[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradience"
version = "0.3.15"
description = "Spectral diagnostics and restraint-first monitoring for neural network training and LoRA fine-tuning."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch",
  "numpy",
  "pyyaml",
]

[project.optional-dependencies]
# Hugging Face integration - for using Gradience with transformers/PEFT
hf = [
  "transformers",
  "peft",
  "accelerate",
  "safetensors",
]

# Benchmarking suite - for running compression validation benchmarks
bench = [
  "transformers",
  "peft", 
  "datasets",
  "safetensors",
  "accelerate",
]

# Development tools - for contributors
dev = [
  "pytest",
  "build",
  "ruff",
  "mypy",
]

# All optional dependencies for full functionality
all = [
  "transformers",
  "peft",
  "datasets", 
  "accelerate",
  "safetensors",
  "pytest",
  "build",
  "ruff",
  "mypy",
]

[project.scripts]
gradience = "gradience.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gradience*"]

[tool.setuptools]
include-package-data = true
